@@ -1,5 +1,6 @@
 2024-09-15 Konstantin Kushnir <chpock@gmail.com>
 	* Standardize root mount point as //cookit:/
+	* Standardize builtin commands --wrap and --stats
 
 2024-09-14 Kontantin Kushnir <chpock@gmail.com>
 	* Add build for Tcl9 (macOS doesn't work yet)
